fix: removed custom pointer on mobile and made it less jiterry

--- a/src/index.css
+++ b/src/index.css
@@ -57,5 +57,5 @@ footer {
 }
 
 .cursor {
-  transition: all 100ms ease-out;
+  transition: all 150ms ease-out;
 }
